Looks Like Last Commit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       href="https://fonts.googleapis.com/css?family=Catamaran:400,500,600,700|PT+Serif:700&display=swap"
       rel="stylesheet"
     />
-    <title>Noah</title>
+    <script src="https://use.fontawesome.com/d8c9c972d6.js"></script>
+    <title>Noah - Modern Art, Style Your Soul</title>
   </head>
   <body>
     <header>
@@ -98,7 +99,7 @@
 
         <div class="service">
           <img src="./assets/img/delivery.svg" alt="" class="service__svg">
-          <h4 class="service__title">Delivery.</h4>
+          <h4 class="service__title">Free Delivery.</h4>
           <p class="service__para">We promise the fastest delivery in this industry. We use the best delivery service providers around</p>
         </div>
 
@@ -110,6 +111,49 @@
 
       </div>
     </section>
+
+    <footer class="footer">
+      <h1 class="footer__title"> Noah</h1>
+      <div class="flex">
+        <div class="footer__section">
+          <h3 class="footer_subtitle">About Us</h3>
+
+          <a href ="#" class="footer__link">
+            Noah's Background
+          </a>
+          <a href ="#" class="footer__link">
+            Contact Us
+          </a>
+          <a href ="#" class="footer__link">
+            FAQ
+          </a>
+        </div>
+        <div class="footer__section">
+          <h3 class="footer_subtitle">Legal</h3>
+          <a href="#" class="footer__link">
+            Terms & Conditions
+          </a>
+          <a href="#" class="footer__link">
+            Privacy Policy
+          </a>
+        </div>
+        <div class="footer__section footer__section--social">
+          <h3 class="footer_subtitle">Follow Us</h3>
+          <div class="flex">
+            <a href ="#" class="footer__link footer__link--social">
+              <i class="fa fa-facebook"></i>
+            </a>
+            <a href ="#" class="footer__link footer__link--social">
+              <i class="fa fa-instagram"></i>
+            </a>
+            <a href ="#" class="footer__link footer__link--social">
+              <i class="fa fa-envelope"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </footer>
 
 
   </body>
